<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="find_my_representatives">Find my representatives</string>
    <string name="upcoming_elections">Upcoming elections</string>
    <string name="representative_search">Representative Search</string>
    <string name="my_representatives">My Representatives</string>
    <string name="use_my_location">USE MY LOCATION</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="elections">Elections</string>
    <string name="election_information">Election Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="address_line_1">Address line 1</string>
    <string name="address_line_2">Address line 2</string>
    <string name="city">City</string>
    <string name="zip_code">Zip code</string>
    <string name="no_state">No State elections available for this election</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="you_need_to_grant_permission">You need to grant permission</string>


</resources>
